interflop-backend-vprec 1/2

--- a/src/vfcwrapper/Makefile.am
+++ b/src/vfcwrapper/Makefile.am
@@ -4,6 +4,6 @@ vfcwrapper.c: main.c hashset.c
 	@cat ../../config.h | grep 'ADDR2LINE_PATH' > vfcwrapper.c
 	@echo "// vfcwrapper.c is automatically generated" >> vfcwrapper.c
 	@echo "// do not modify this file directly" >> vfcwrapper.c
-	@cat main.c funcinstr.c ../common/vfc_hashmap.c ../common/logger.c >> vfcwrapper.c
+	@cat main.c funcinstr.c >> vfcwrapper.c
 
 CLEANFILES=vfcwrapper.c
